--- a/Friday Challenge 1/view.css
+++ b/Friday Challenge 1/view.css
@@ -1,5 +1,3 @@
-
-
 body {
     text-align: center;
     margin: 1rem;
@@ -9,7 +7,7 @@ body {
 .background {
     display: flex;
     flex-direction: column;
-    background-color: #ecefe7;
+    background-color: #f7fced;
     width: 820px;
     height: 1200px;
     margin: auto;
@@ -34,7 +32,7 @@ caption {
 }
 
 table, tr, td {
-     width: 33.3%;
+    width: 33.3%;
     table-layout: fixed;
     text-align: center;
     font-size: 15px; 
@@ -43,6 +41,10 @@ table, tr, td {
 
 tr, th, td {
     padding: 5px;
+}
+
+table {
+    box-shadow: 0 3px 5px 5px #d8d7d758;
 }
 
 th {
