--- a/Friday Challenge 1/view.css
+++ b/Friday Challenge 1/view.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     margin: 1rem;
-    font-family: Segoe 'UI';
+    font-family: 'Times New Roman'
 }
 
 .background {
@@ -20,7 +20,7 @@ body {
 }
 
 caption {
-    font-family: 'times new roman';
+    font-family: 'Calibri';
 }
 
 .kalendorius {
